metadata-classic/objects/Request__c.object
<CustomObject>
    <description>Custom object to store records pertaining to quoting service requests.  Records store parsed email data from the request email sent to the professional enrolled in quoting service.</description>
    <fields>
        <fullName>AdminLinktoQuote__c</fullName>
        <formula>IF(
NOT(ISBLANK(EmailSendQuoteLinkPart1__c)),
HYPERLINK(&quot;https://www.thumbtack.com/admin/login?service_id=&quot;&amp;EmailServiceId__c&amp;&quot;&amp;return_url=/request/&quot;&amp;EmailRequestId__c&amp;&quot;&quot;, &quot;Request ID &quot;&amp;EmailRequestId__c),
&quot;Link Not Available&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Admin Link to Quote</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BalanceState__c</fullName>
        <description>1 = Payment on pros account is in good standing, 2 = Payment on pros account is not in good standing and/or no longer valid. This field is a formula that pulls the current balance state from the related account. The Request trigger handler uses this field to auto update the status.</description>
        <formula>IF( 
ISPICKVAL(Service__r.ProAccount__r.BillingType__c, &apos;PPC - Manual Invoicing&apos;), 1,
IF( 
ISPICKVAL(Service__r.ProAccount__r.BillingType__c, &apos;Pay Per Appointment&apos;), 1,
IF(
NOT(ISBLANK(Service__c)), Service__r.ProAccount__r.uct_balance_state__c, 
NULL 
)))</formula>
        <inlineHelpText>1 = Payment on pros account is in good standing, 2 = Payment on pros account is not in good standing and/or no longer valid. Accounts where Billing Type = PPC - Manual Invoicing or Pay Per Appointment will NOT auto pass requests.</inlineHelpText>
        <label>Balance State</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BudgetFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This check box is used to indicate when a  request was passed on because the budget amount was exceeded.</description>
        <label>Budget Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ContactBudgetPercentage__c</fullName>
        <formula>Service__r.ProAccount__r.ContactBudgetPercentage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Budget Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CreatedDateTime__c</fullName>
        <description>Formula field to display the created date and time for the Request__c object; used for reporting and list views.</description>
        <formula>CreatedDate</formula>
        <label>Created Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CreditBalance__c</fullName>
        <formula>IF(
NOT(ISBLANK(Service__c)), Service__r.ProAccount__r.CreditBalance__c,
NULL
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credit Balance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EmailFromAddressText__c</fullName>
        <description>Text field to store the full FROM: address (if over 80 characters).</description>
        <label>Email From Address Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailFromAddress__c</fullName>
        <description>Incoming email From address</description>
        <label>Email From Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>EmailHTMLBodyLong__c</fullName>
        <label>Email HTML Body Long</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EmailHTMLBody__c</fullName>
        <description>The HTML/Text body of the incoming email</description>
        <label>Email HTML Body</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>EmailHeaders__c</fullName>
        <description>The headers of the incoming email.</description>
        <label>Email Headers</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EmailMessageId__c</fullName>
        <description>The Message-ID—the incoming email&apos;s unique identifier.</description>
        <label>Email Message Id</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EmailRequestId__c</fullName>
        <description>Formula field to display the Request ID as found in the Send Quote URL link.</description>
        <formula>EncodedRequestID__c</formula>
        <label>Email Request Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailSendQuoteLinkPart1__c</fullName>
        <label>Email Send Quote Link Part 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailSendQuoteLinkPart2__c</fullName>
        <label>Email Send Quote Link Part 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailSendQuoteLinkPart3__c</fullName>
        <label>Email Send Quote Link Part 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailSendQuoteLink__c</fullName>
        <description>The &quot;Send Quote&quot; URL link as stored in the incoming email body.</description>
        <label>Email &quot;Send Quote&quot; Link</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EmailServiceId__c</fullName>
        <formula>EncodedServiceID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Service Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailSubject__c</fullName>
        <description>The subject of the incoming email.</description>
        <label>Email Subject</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EmailTextBodyLong__c</fullName>
        <description>Long text area to store the scrubbed HTML Email Body to remove HTML tagging; field is populated via apex class.</description>
        <label>Email Text Body Long</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EmailToAddressText__c</fullName>
        <description>Text field to store the full TO: address (if over 80 characters).</description>
        <label>Email To Address Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailToAddress__c</fullName>
        <description>Incoming email To: address</description>
        <label>Email To Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>EncodedRequestID__c</fullName>
        <label>Encoded Request ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EncodedServiceID__c</fullName>
        <description>The encoded serviced ID parsed from the html email body.</description>
        <label>Encoded Service ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FreeTrialStatus__c</fullName>
        <formula>Service__r.FreeTrialStatus__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Free Trial Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastStatusChange__c</fullName>
        <description>The date/time the status field changed last.  Used for reporting.</description>
        <label>Last Status Change</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastSyncedWithDataPlatform__c</fullName>
        <label>LastSyncedWithDataPlatform</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Notification__c</fullName>
        <description>Used to display a notification to the user as an alternative to a validation rule.</description>
        <formula>IF(Owner:Queue.Id = &apos;00G31000004pyCq&apos;, IMAGE (&quot;resource/TakeOwnerRequest&quot;, &quot;Ownership&quot;,40,175),
IF(OwnerId &lt;&gt; $User.Id, IMAGE (&quot;resource/IncorrectRequestOwnerWarning&quot;, &quot;Incorrect&quot;,45,260), 
NULL 
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Notification</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PricingCalculator__c</fullName>
        <description>Formula field to display a hyperlink to the Pro&apos;s pricing calculator.</description>
        <formula>IF(ISBLANK( Service__r.PricingCalculator__c ), &quot;Link not Available&quot;,
HYPERLINK( Service__r.PricingCalculator__c , &quot;Pricing Calculator for &quot; +  Service__r.Name )
)</formula>
        <label>Pricing Calculator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PurchasedBalance__c</fullName>
        <formula>IF( 
NOT(ISBLANK(Service__c)),  Service__r.ProAccount__r.TotalThumbtackBalance__c, 
NULL 
)</formula>
        <label>Purchased Balance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QuotingServiceStatus__c</fullName>
        <description>Formula field to bring over the quoting service status onto the Request record.  Used in list views and for process builder.</description>
        <formula>TEXT(Service__r.QuotingServiceStatus__c)</formula>
        <label>Quoting Service Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReqExternalID__c</fullName>
        <description>Field to store the Thumbtack product external ID of the Request.  (Note: will not be populated on records created via the email handler).</description>
        <externalId>true</externalId>
        <label>Req External ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RequestChargeStatus__c</fullName>
        <description>The pros balance state when the request was created.</description>
        <inlineHelpText>The pros balance state when the request was created.</inlineHelpText>
        <label>Request Charge Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RequestPurchasedBalance__c</fullName>
        <description>Balance the pro has on their account at the time of request creation, amount is in cents.</description>
        <inlineHelpText>Balance the pro has on their account at the time of request creation, amount is in cents.</inlineHelpText>
        <label>Request Purchased Balance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SendQuoteLink__c</fullName>
        <description>Formula field to combine the parts of the long URL for the request.  Used in list views.</description>
        <formula>IF(
ISBLANK(EmailSendQuoteLinkPart1__c),&quot;Link not available&quot;,
HYPERLINK(
  SUBSTITUTE(EmailSendQuoteLinkPart1__c, &quot;&amp;amp;&quot;,&quot;&amp;&quot;) +  
  SUBSTITUTE(EmailSendQuoteLinkPart2__c, &quot;&amp;amp;&quot;,&quot;&amp;&quot;) +  
  SUBSTITUTE(EmailSendQuoteLinkPart3__c, &quot;&amp;amp;&quot;,&quot;&amp;&quot;) + 
  SUBSTITUTE(EmailSendQuoteLinkPart4__c, &quot;&amp;amp;&quot;,&quot;&amp;&quot;), 
IMAGE(&quot;resource/SendQuoteLinkImage&quot;,&quot;Send Quote&quot;, 20,80))
)</formula>
        <label>Send Quote Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Pro Assistant Profile (aka Service) record.</description>
        <label>Service</label>
        <referenceTo>Service__c</referenceTo>
        <relationshipLabel>Requests</relationshipLabel>
        <relationshipName>Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StatusNotes__c</fullName>
        <description>Used for notes about why a status was selected.</description>
        <label>Status Notes</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Picklist whose values indicate the status of the request record.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Quoted</fullName>
                </value>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>Forward (Sent to Pro)</fullName>
                </value>
                <value>
                    <fullName>No Action Needed</fullName>
                </value>
                <value>
                    <fullName>Pro Already Quoted</fullName>
                </value>
                <value>
                    <fullName>Pricing Calculator Error</fullName>
                </value>
                <value>
                    <fullName>Pro Paused</fullName>
                </value>
                <value>
                    <fullName>Max Contact Reached</fullName>
                </value>
                <value>
                    <fullName>DNQ In Pricing Calculator</fullName>
                </value>
                <value>
                    <fullName>No PC Template For Category</fullName>
                </value>
                <value>
                    <fullName>Expired/Inactive Request</fullName>
                </value>
                <value>
                    <fullName>No Credits - Cant Quote</fullName>
                </value>
                <value>
                    <fullName>No Balance - Cant Quote</fullName>
                </value>
                <value>
                    <fullName>Weekly Budget Limit Hit - Passed</fullName>
                </value>
                <value>
                    <fullName>Other - Passed</fullName>
                </value>
                <value>
                    <fullName>Negative Balance</fullName>
                </value>
                <value>
                    <fullName>No Related Service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SubscriptionType__c</fullName>
        <description>Formula to bring over the Service subscription type to the Request record.  Used in list views and workflows/process.</description>
        <formula>TEXT(Service__r.ProAssistantSubscriptionType__c)</formula>
        <label>Subscription Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TimetoQuoteInHours__c</fullName>
        <description>The time from created date to the time the status changed  (in hours).</description>
        <formula>(LastStatusChange__c - CreatedDate)*24</formula>
        <label>Time to Quote (in Hours)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TimetoQuoteinMinutes__c</fullName>
        <description>Formula field to calculate the time difference between the create date and the last status change date.  Displayed in minutes.</description>
        <formula>(LastStatusChange__c - CreatedDate)*1440</formula>
        <label>Time to Quote (in Minutes)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UrlParms__c</fullName>
        <description>A debug field holding JSON version of Pro Request URL query string parms</description>
        <label>Url Parms</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Service__c</columns>
        <columns>SendQuoteLink__c</columns>
        <columns>PricingCalculator__c</columns>
        <columns>EmailRequestId__c</columns>
        <columns>CreatedDateTime__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Request__c.ProAssistanceRequest</value>
        </filters>
        <label>14.  All</label>
        <sharedTo>
            <roleAndSubordinatesInternal>LabsManagingUser</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>ProServicesManaging_User</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllCompletedRequestsLast7Days</fullName>
        <columns>QuotingServiceStatus__c</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Service__c</columns>
        <columns>SendQuoteLink__c</columns>
        <columns>PricingCalculator__c</columns>
        <columns>EmailRequestId__c</columns>
        <columns>CreatedDateTime__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Request__c.ProAssistanceRequest</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>New</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <label>12. All Completed Requests (Last 7 Days)</label>
        <sharedTo>
            <roleAndSubordinatesInternal>ProServicesManaging_User</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>SAM_Managing_User</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllForwardedRequestsLast7Days</fullName>
        <columns>QuotingServiceStatus__c</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Service__c</columns>
        <columns>SendQuoteLink__c</columns>
        <columns>PricingCalculator__c</columns>
        <columns>EmailRequestId__c</columns>
        <columns>CreatedDateTime__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Request__c.ProAssistanceRequest</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Forward (Sent to Pro)</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <label>11. All Forwarded Requests (Last 7 Days)</label>
        <sharedTo>
            <roleAndSubordinatesInternal>ProServicesManaging_User</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>SAM_Managing_User</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllNewRequests</fullName>
        <columns>QuotingServiceStatus__c</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Service__c</columns>
        <columns>SendQuoteLink__c</columns>
        <columns>PricingCalculator__c</columns>
        <columns>EmailRequestId__c</columns>
        <columns>CreatedDateTime__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>PurchasedBalance__c</columns>
        <columns>BalanceState__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Request__c.ProAssistanceRequest</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <label>13. All New Requests</label>
        <sharedTo>
            <roleAndSubordinatesInternal>ProServicesManaging_User</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>SAM_Managing_User</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllPassedRequestsLast7Days</fullName>
        <columns>QuotingServiceStatus__c</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Service__c</columns>
        <columns>SendQuoteLink__c</columns>
        <columns>PricingCalculator__c</columns>
        <columns>EmailRequestId__c</columns>
        <columns>CreatedDateTime__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Request__c.ProAssistanceRequest</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Passed</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <label>10. All Passed Requests (Last 7 Days)</label>
        <sharedTo>
            <roleAndSubordinatesInternal>ProServicesManaging_User</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>SAM_Managing_User</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllQuotedRequestsLast7Days</fullName>
        <columns>QuotingServiceStatus__c</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Service__c</columns>
        <columns>SendQuoteLink__c</columns>
        <columns>PricingCalculator__c</columns>
        <columns>EmailRequestId__c</columns>
        <columns>CreatedDateTime__c</columns>
        <columns>TimetoQuoteinMinutes__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Request__c.ProAssistanceRequest</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Quoted</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <label>09. All Quoted Requests (Last 7 Days)</label>
        <sharedTo>
            <roleAndSubordinatesInternal>ProServicesManaging_User</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>SAM_Managing_User</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllRequestsLast7Days</fullName>
        <columns>QuotingServiceStatus__c</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Service__c</columns>
        <columns>SendQuoteLink__c</columns>
        <columns>PricingCalculator__c</columns>
        <columns>EmailRequestId__c</columns>
        <columns>CreatedDateTime__c</columns>
        <columns>LastStatusChange__c</columns>
        <columns>TimetoQuoteinMinutes__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Request__c.ProAssistanceRequest</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <label>08.  All Requests (Last 7 Days)</label>
        <sharedTo>
            <roleAndSubordinatesInternal>ProServicesManaging_User</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>SAM_Managing_User</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CreatedToday</fullName>
        <columns>CreatedDateTime__c</columns>
        <columns>NAME</columns>
        <columns>Service__c</columns>
        <columns>StatusNotes__c</columns>
        <columns>EncodedServiceID__c</columns>
        <columns>SubscriptionType__c</columns>
        <columns>Status__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>EmailFromAddress__c</columns>
        <columns>EmailToAddress__c</columns>
        <columns>ReqExternalID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CreatedDateTime__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>X - Created Today</label>
        <sharedTo>
            <role>SystemLevelAccess</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Did_Not_Quote_Request</fullName>
        <columns>NAME</columns>
        <filterScope>Queue</filterScope>
        <label>Did Not Quote</label>
        <queue>Did_Not_Quote</queue>
        <sharedTo>
            <roleAndSubordinatesInternal>ProServicesManaging_User</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>SAM_Managing_User</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyCompletedRequestsLast7Days</fullName>
        <columns>QuotingServiceStatus__c</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Service__c</columns>
        <columns>SendQuoteLink__c</columns>
        <columns>PricingCalculator__c</columns>
        <columns>EmailRequestId__c</columns>
        <columns>CreatedDateTime__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Request__c.ProAssistanceRequest</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>New</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <label>06. My Completed Requests (Last 7 Days)</label>
        <sharedTo>
            <roleAndSubordinatesInternal>ProServicesManaging_User</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>SAM_Managing_User</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyForwardedRequestsLast7Days</fullName>
        <columns>QuotingServiceStatus__c</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Service__c</columns>
        <columns>SendQuoteLink__c</columns>
        <columns>PricingCalculator__c</columns>
        <columns>EmailRequestId__c</columns>
        <columns>CreatedDateTime__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Request__c.ProAssistanceRequest</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Forward (Sent to Pro)</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <label>05. My Forwarded Requests (Last 7 Days)</label>
        <sharedTo>
            <roleAndSubordinatesInternal>ProServicesManaging_User</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>SAM_Managing_User</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyNewRequests</fullName>
        <columns>QuotingServiceStatus__c</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Service__c</columns>
        <columns>SendQuoteLink__c</columns>
        <columns>PricingCalculator__c</columns>
        <columns>EmailRequestId__c</columns>
        <columns>CreatedDateTime__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Request__c.ProAssistanceRequest</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <label>02. My New Requests</label>
        <sharedTo>
            <roleAndSubordinatesInternal>ProServicesManaging_User</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>SAM_Managing_User</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyPassedRequestsLast7Days</fullName>
        <columns>QuotingServiceStatus__c</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Service__c</columns>
        <columns>SendQuoteLink__c</columns>
        <columns>PricingCalculator__c</columns>
        <columns>EmailRequestId__c</columns>
        <columns>CreatedDateTime__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Request__c.ProAssistanceRequest</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Passed</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <label>04. My Passed Requests (Last 7 Days)</label>
        <sharedTo>
            <roleAndSubordinatesInternal>ProServicesManaging_User</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>SAM_Managing_User</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyQuotedRequestsLast7Days</fullName>
        <columns>QuotingServiceStatus__c</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Service__c</columns>
        <columns>SendQuoteLink__c</columns>
        <columns>PricingCalculator__c</columns>
        <columns>EmailRequestId__c</columns>
        <columns>CreatedDateTime__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Request__c.ProAssistanceRequest</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Quoted</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <label>03. My Quoted Requests (Last 7 Days)</label>
        <sharedTo>
            <roleAndSubordinatesInternal>ProServicesManaging_User</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>SAM_Managing_User</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>PausedRequests</fullName>
        <columns>QuotingServiceStatus__c</columns>
        <columns>NAME</columns>
        <columns>Service__c</columns>
        <columns>Status__c</columns>
        <columns>CreatedDateTime__c</columns>
        <columns>EmailToAddress__c</columns>
        <columns>SubscriptionType__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Request__c.ProAssistanceRequest</value>
        </filters>
        <label>15. Paused Requests</label>
        <queue>PausedRequests</queue>
        <sharedTo>
            <roleAndSubordinatesInternal>ProServicesManaging_User</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>SAM_Managing_User</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Requests</pluralLabel>
    <recordTypes>
        <fullName>ProAssistanceRequest</fullName>
        <active>true</active>
        <description>Record type used to manage the requests for Pro&apos;s who are enrolled in the Pro Assistance or Quoting Service programs.</description>
        <label>Pro Assistance Request</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>PreventStatusChangeInQueue</fullName>
        <active>true</active>
        <description>Prevents someone from updating the status of a request if it is owned by the Pro Assistance queue.</description>
        <errorConditionFormula>AND(
Owner:Queue.Id = &apos;00G31000004pyCq&apos;,
ISCHANGED(Status__c)
)</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>You cannot change the status of a Request when it is owned by the Pro Assistance queue. Please take ownership of this request, then update the Status.</errorMessage>
    </validationRules>
</CustomObject>